# pylint-per-file-ignores

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml  readme.md  tox.ini
.github/workflows/: lint.yml  release.yml
pylint_per_file_ignores/: __init__.py
