[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.black]
line-length = 99
quiet = true

[tool.isort]
profile = "black"
quiet = true

[tool.poetry]
authors = ["Christopher Pickering <christopher@going.bg>"]
description = "A pylint plugin to ignore error codes per file."
license = "MIT"
name = "pylint-per-file-ignores"
readme = "README.md"
repository = "https://github.com/christopherpickering/pylint-per-file-ignores.git"
version = "1.4.0"

[tool.poetry.dependencies]
python = "^3.8.1"
tomli = {version = "^2.0.1", python = "<3.11"}

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.10.1"
ruff = "^0.9.0"
tox = "^4.0.8"

[tool.ruff]
line-length = 99  # Ensure same line-length as for Black, above.

[tool.ruff.lint]
ignore = ["B009", "B010"]
select = ["E", "F", "I", "S", "T20", "PL", "B"]
